fix: change z-index of popups to appear above navbar

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -721,6 +721,10 @@ video {
   z-index: 10;
 }
 
+.z-20{
+  z-index: 20;
+}
+
 .m-auto{
   margin: auto;
 }
